# bevy_platformer2d

./: Cargo.toml
assets/: map.tmx
src/: camera.rs  config.rs  editor.rs  egui.rs  main.rs  world.rs
src/player/: animation.rs  dash.rs  mod.rs  movement.rs  setup.rs
src/tile/: mod.rs
