[package]
name = "bevy_platformer2d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.2", features = [ "dynamic_linking", "file_watcher" ] }
bevy_rapier2d = { version = "*", features = [ "simd-stable" ] }

bevy_pixel_camera = "0.13.0"
bevy_spritesheet_animation = "0.1.0"

bevy_editor_pls = "0.8.1"

bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap" }
tiled = { version = "0.11.2", default-features = false }
thiserror = { version = "1.0.60" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Zshare-generics=y"]
